# paper-search

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/architecture/: careful-plan-roadmap.md  phase1-no-public-endpoint.md  philosophy-and-positioning.md
docs/specs/: api-sources-inventory.md  cli-contract-phase1.md  combustion-v1-quality-first-plan.md  elsevier-semanticscholar-ingestion-spec.md  feishu-webhook-phase1.md  graph-exploration-feature-plan.md  mcp-tools-phase1.md  multi-hop-topic-ranking-plan.md  pi-mono-provider-integration.md  search-loop-phases-api-first.md
docs/specs/schemas/: search.request.schema.json  search.result.schema.json
docs/undermind/whitepaper/: whitepaper.md  whitepaper_meta.json
src/papersearch/adapters/: commands.py
src/papersearch/app/: repository.py  run_manager.py  service.py
src/papersearch/core/: models.py
src/papersearch/ingest/: __init__.py  discovery_bohrium.py  discovery_crossref.py  discovery_openalex.py  discovery_semanticscholar.py  errors.py  fetch_elsevier_xml.py  figure_assets.py  http.py  models.py  normalize_json.py  parse_elsevier_xml.py  pipeline.py  quality_checks.py  render_markdown.py  xml_extractors.py
tests/: live_elsevier_matrix.py  live_smoke.py  test_bohrium_client.py  test_crossref_client.py  test_graph_api_first.py  test_ingest_mock.py  test_ingest_refactor.py  test_operations_refactor.py  test_pi_mono_client.py  test_relevance_classification.py  test_run_manager_workflow.py  test_seed_candidates.py
(+5 files in other folders)
